main.css
*{
    box-sizing: border-box;
    font-family: Muli, sans-serif;
    font-size: 17px;
    line-height: 1.5;
    color: #3A3D47;
    scroll-behavior: smooth;
}

h1, h2, h3{
    font-family: Philosopher, sans-serif;
    color: #002652;
}

.hero-email:hover, .hero-email:focus{
    background-color: #48568a;
    color: #FFFFFF;
    box-shadow: 0 2px 16px rgba(38, 73, 75, 0.45);

}

a:hover, a:focus{
    color: #48568a;
    transform: translateY(-3px);
  
}

.folio-links a:hover, .folio-links a:focus{
    color: #8C3A77;
}



nav{
    position: fixed;
    top:0;
    left: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width:100%;
    margin-top: 3%;
    background-color: #FFFFFF;
    margin-top: 0;
    padding-top: 4%;
   
}
.nav-collapse{
    position: absolute;
    top: 45px;
    display: flex;
    width: 50%;
    left: 0;
    
}

.hide-nav-link{
    display:none;
}

.navbar-link{
    background-color: white;
}

.nav-collapse li{
    color: #8C3A77;
    list-style-type: none;
    margin-left: 30%;


   
}
nav a{
    text-decoration: none;
    color: #8C3A77;
    margin: 2%;
    font-family: philosopher, sans-serif;
    font-size: 26px;
    padding-left: 4%;
}
.ham-button{
    width: 100px;
    height: 50px
}

.hamburger{
    width: 35%;
    padding-top: 5%;
}

header{
    padding: 15% 20%;
    text-align: left;
    height:100vh;
    min-height:450px;
    margin-top: 25%;
}
h1{
    font-size: 30px;
}

.hero{
    font-size: 17px;
}

.hero-email{
    height: 50px;
    text-align: center;
    text-decoration: none;
    font-size: 20px;
    line-height: 50px;
    font-size: 19px;
    margin-top: 20%;
    margin-left: 30%;
    background-color: #8C3A77;
    color:#FFFFFF;
    border-radius: 5px;
    font-family: Muli, sans-serif;
    -moz-box-shadow:    4px 2px 2px 0px #ccc;
    -webkit-box-shadow: 4px 2px 2px 0px #ccc;
    box-shadow:         4px 2px 2px 0px #ccc;
    transition: all ease-in-out 0.2s;
   

    width: 150px;
    display: block;
}

section{
    min-height:500px;
    padding: 6%;
}
.screenshot{
    width: 100%;
}

#portfolio h2{
    font-size: 26px;
    margin-bottom: 15%;
}

#portfolio h3{
    font-size: 21px;
    margin-top: 15%;
    margin-bottom: 5px;
}

#portfolio ul{
    list-style: none;
    display: flex;
    justify-content: start;
    margin: 0;
    margin-block-start: 0;
    padding: 0;
}
#portfolio a{
    width: 10%;
}

.app-icon{
    width:50%;
}

#portfolio p{
    margin-top: 10%;
    margin-top: 5px;
    font-size: 18px;
}
.folio-links li{
    margin-left: 25%;
}
.folio-links a{
    color: #48568a;
    text-decoration: none;
    font-weight: bold;
    transition: all ease-in-out 0.2s;
}

#bio{
    height: auto;
}

#headshot{
    width: 200px;
    height: 200px;
    border-radius: 50%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    display: block;
}

#bio p{    font-size: 13px;
    margin-top: 10%;
    margin-bottom:0;

}

#contact-links{
    list-style: none;
    display: flex;
    justify-content: start;
    margin: 0;
    margin-block-start: 0;
    padding: 0;
    margin-bottom:5%;

}

#contact-links li{
    width: 10%;
    margin-left: 17%;
}

#contact-links img{
    width: 30px;
    height: 30px;
}


footer{
    font-size: 12px;
    min-height: 25px;
    padding: 1% 2%;
    text-align: left;
    margin-top:-5%;
}

footer a{
    font-size: 12px;
}

@media screen and (min-width:768px){

    nav{
        height: 60px;
        padding-bottom: 5px;
        padding-top: 20px;
    }
   
    .hide-nav-link{
        display:flex;
    }

    .hide-button{
        display: none;
    }
  
    .nav-collapse{
        position: relative;
        left: -50px;
        top: -2px;
        padding-right: 5%;
       
    }

    header{
        margin-top: 5%;
        padding-top: 5%;
    }

    h1{
        font-size: 42px;
    }

    .hero{
        font-size: 20px;
    }

    .hero-email{
      
        margin-top: 10%;
        margin-left: 70%;
        
    }

    #portfolio h2{
        display: none;
    }

    .screenshot{
        margin-top: 10%;
        width: 65%;
        margin-left: auto;
        margin-right: auto;
        display: block;
    }

    .folio-deets{
        margin-top: 3%;
        margin-left: 17%
    }

    #portfolio h3{
        margin-top: 3%;
    }

    #portfolio ul{
        width: 50%;
    }

    #portfolio p{
        font-size: 16px;
    }


    .folio-links li{
        margin-left:0;
        margin-right: 30%;
    }

    .folio-links a{
        font-size:21px;
    }

    #bio{
        display: flex;
        flex-wrap: wrap;
    }

    #bio p{
        width:400px;
        font-size: 16px;
        margin-top: 3%;
    }

    #headshot{
        margin-left: 0;
    }
    #contact-links{
        margin-right: 35%;
    }

    #contact-links li{
        margin-right: 60%;
    }

}   

    @media screen and (min-width:1024px){
        nav a{
            font-size: 32px;
        }

        .nav-collapse a{
            font-size: 26px;
        }
        .screenshot{
            width: 50%;
        }

        .folio-deets{
            margin-left:25%;

        }

        #portfolio a{
            font-size: 18px;
        }

        #headshot{
            margin-right:0;
            width: 225px;
            height: 225px;
         }

         #bio>*{
             margin-right: 15%;
         }

         .contact-links{
             margin-top: 2%;
         }

         
        

        
    }

    @media screen and (min-width:1440px){

        nav{
            padding-top: 1%;
        }

        #bio{
            padding-top: 4%;
        }
        
         #headshot{
         
            width: 325px;
            height: 325px;
            margin-left:0%;
         }

         #bio p{
             font-size: 20px;
             margin-left: 8%;
         }

        

         #contact-links img{
             width: 50px;
             height: 50px;
         }
        }

